SDKs/twilio.com/twilio_ip_messaging_v2/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateChannelRequest, CreateChannelResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateChannelRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  pathParams: {
    serviceSid: "sit",
  },
  headers: {
    xTwilioWebhookEnabled: "true",
  },
  request: {
    attributes: "culpa",
    createdBy: "expedita",
    dateCreated: "1997-12-26T13:41:25Z",
    dateUpdated: "2003-04-20T23:11:44Z",
    friendlyName: "expedita",
    type: "private",
    uniqueName: "fugit",
  },
};

sdk.createChannel(req).then((res: CreateChannelResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createChannel`
* `createChannelWebhook`
* `createCredential`
* `createInvite`
* `createMember`
* `createMessage`
* `createRole`
* `createService`
* `createUser`
* `deleteBinding`
* `deleteChannel`
* `deleteChannelWebhook`
* `deleteCredential`
* `deleteInvite`
* `deleteMember`
* `deleteMessage`
* `deleteRole`
* `deleteService`
* `deleteUser`
* `deleteUserBinding`
* `deleteUserChannel`
* `fetchBinding`
* `fetchChannel`
* `fetchChannelWebhook`
* `fetchCredential`
* `fetchInvite`
* `fetchMember`
* `fetchMessage`
* `fetchRole`
* `fetchService`
* `fetchUser`
* `fetchUserBinding`
* `fetchUserChannel`
* `listBinding`
* `listChannel`
* `listChannelWebhook`
* `listCredential`
* `listInvite`
* `listMember`
* `listMessage`
* `listRole`
* `listService`
* `listUser`
* `listUserBinding`
* `listUserChannel`
* `updateChannel`
* `updateChannelWebhook`
* `updateCredential`
* `updateMember`
* `updateMessage`
* `updateRole`
* `updateService`
* `updateUser`
* `updateUserChannel`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
